Riccardomerolla/issue10 (#24)
* docs: add Counter example application design

Design document for issue #10 - Counter app demonstrating The Elm
Architecture pattern with keyboard subscriptions.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* docs: add Counter example implementation plan

Detailed TDD implementation plan for issue #10 with 6 tasks:
1. Add ZSub.keyPress keyboard subscription helper
2. Create CounterApp with Elm Architecture pattern
3. Update README documentation
4. Run full test suite
5. Verify code quality
6. Final verification

Each task has explicit steps with expected outputs and commit messages.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* feat: add ZSub.keyPress for keyboard input subscriptions

Adds keyboard input subscription helper using JLine3's NonBlockingReader.
Maps raw keyboard input to Key ADT and allows user-defined handlers.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* fix: use attemptBlocking and acquireRelease in keyPress

- Use attemptBlocking for blocking I/O operations
- Use acquireRelease for proper resource management
- Ensures terminal cleanup even on initialization failure

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* fix: use attemptBlocking for terminal cleanup

Terminal.close() is a blocking side effect that should use
attemptBlocking instead of succeed.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* feat: add CounterApp demonstrating Elm Architecture

Implements counter example with:
- CounterState case class
- CounterMsg enum (Increment, Decrement, Reset, Quit)
- Keyboard subscriptions (+, -, r, q keys)
- Pure view rendering with layoutz

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* docs: add Counter example to README

Documents CounterApp example showing Elm Architecture pattern
with keyboard subscriptions.

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>

* chore: apply code formatting fixes to Counter and ZSub

App